feat: translation for devise fileds (#109)
feat: merge #109 into master

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,19 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              taken: "An account already exists with this email address. Please try again"
+              blank: "The Email field must not be empty"
+            password:
+              blank: "The Password field must not be empty"
+            password_confirmation:
+              confirmation: "Incorrect password verification. Please try again"
+            current_password:
+              invalid: "The current password is incorrect. Please try again"
+              blank: "The Current password field must not be empty"
+
