--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,9 @@
 fr:
+  placeholder_email: "Adresse e-mail"
+  placeholder_password: "Mot de passe"
+
+  shared_links:
+    no_account: "Vous n'avez pas de compte ?"
   activerecord:
     errors:
       models:
