feat: change api response (#157)
* feat: change api response

* fix: wrong label for ingredient

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,6 +73,7 @@ en:
       difficulty: "Difficulty"
       ingredient: "Ingredient(s)"
       utensil: "Utensil(s)"
+      image: "image"
     action:
       edit: "Edit"
       show: "Show"
