Fix/update recipe (#201)
* feat: add categories + quantity types + quantity equiv* NOT WORKING

* fix: step attribute

* fix: rspec recipe

* feat: quantity equiv. + related table

* feat: add categories + equiv to recipes

* feat: recipe_quantity + link quantity_type

* feat: times + link recipe_ingre to quant

* feat: active_admin base OK + api controller get

* feat: active_admin base OK + api controller get

* fix: ingredients get index api

* fix: delete bad file in images

* fix: migration failed

* fix: migration failed

* fix: undefined method on heroku

* fix: bullet not found in prod

* fix: missing ingredient in admin

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,7 +83,8 @@ en:
       title: "Title"
       score: "Score"
       step: "Step"
-      time: "Time (min)"
+      cooking_time: "Cooking Time (min)"
+      preparation_time: "Preparation Time (min)"
       description: "Description"
       difficulty: "Difficulty"
       ingredient: "Ingredient(s)"
@@ -97,6 +98,7 @@ en:
       back: "Back"
       confirm: "Are you sure ?"
     creation:
+      missing_ingredients: "A recipe needs at least one ingredient!"
       invalid: "Your recipe is invalide, please make sure to fill the required fields"
       valid: "New recipe created! Thank you"
       confirm: "Validate"
