Feat/recipes/user feedback (#212)
* Fix: Search problem with blob image

* Feat: Add score for recipes

* Feat: Add recipy design and fonctionnal for feedback

* Feat: Add feedback

* Add api return for recipes view feedback

* Feat: Add scores_controller api call

* Fix: remove errors

* Fix: Api not API

* Fix: translation

* Fix: Card for preparation

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -48,16 +48,28 @@ fr:
         edit: "Modifier votre recette"
         new: "Création d'une recette"
         title: "Titre"
+        score_with_count: "Note (%{count})"
         score: "Note"
+        comment: "Commentaire"
         step: "Etape(s)"
-        time: "Temps de préparation (en min)"
+        time: "Temps"
         description: "Description"
         difficulty: "Difficulté"
         ingredient: "Ingrédient(s)"
+        preparation: "Préparation"
+        preparation_time: "Temps de préparation"
+        cooking_time: "Temps de cuisson"
         ingredient_number: "Nombre d'ingrédients"
-        utensil: "Ustensile(s)"
+        ustensil: "Ustensile(s)"
         image: "image"
+        all_feedback: "Tous les avis"
+        no_feedback: "Aucun avis pour le moment, soyez le premier à en donner un."
+        give_feedback_for: "Donnez nous votre avis pour '%{recipe_title}' !"
+        connect_to_give_feedback: "Connectez-vous et donnez votre avis."
+        no_score: "Pas de notes pour le moment."
       action:
+        give_feedback: "Donner votre avis"
+        feedback: "Donner mon avis"
         edit: "Modifier"
         show: "Afficher"
         new: "Nouvelle recette"
@@ -70,6 +82,8 @@ fr:
         valid: "Nouvelle recette créée! Merci"
         confirm: "Valider"
         invalid_image: "Fichier image invalide"
+        feedback:
+          valid: "Votre avis a bien été pris en compte! Merci"
       edit:
         invalid: "Votre recette est invalide, veuillez vous assurer de bien remplir les champs obligatoires."
         valid: "Votre recette a été modifiée avec succés!"
