Feat/cooking notebook (#217)
* feat: notebook adding recipe

* feat: api with minor bug

* feat: button to remove recipe

* feat: improving views

* feat: notebook for each user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,3 +117,7 @@ en:
     no_title: "Missing ingredient title"
     not_created: "Ingredient cannot be created"
     no_null: "Ingredient cannot be null"
+  notebook:
+    edit:
+      invalid: "The notebook is invalid"
+      invalid_image: "Image is not valid"
