--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -6,10 +6,88 @@ fr:
     facebook: "Se connecter avec Facebook"
     google_oauth2: "Se connecter avec Google +"
 
+  users:
+    confirmations:
+      confirmed: "Votre compte a été validé."
+      send_instructions: "Vous allez recevoir les instructions nécessaires à la confirmation de votre compte dans quelques minutes."
+      send_paranoid_instructions: "Si votre e-mail existe dans notre base de données, vous allez bientôt recevoir un e-mail contenant les instructions de confirmation de votre compte."
+    failure:
+      already_authenticated: "Vous êtes déjà connecté"
+      inactive: "Votre compte n'est pas encore activé."
+      invalid: "Email ou mot de passe incorrect."
+      last_attempt: "Vous avez droit à une tentative avant que votre compte ne soit verrouillé."
+      locked: "Votre compte est verrouillé."
+      not_found_in_database: "Email ou mot de passe invalide."
+      timeout: "Votre session est expirée. Veuillez vous reconnecter pour continuer."
+      unauthenticated: "Vous devez vous connecter ou vous inscrire pour continuer."
+      unconfirmed: "Vous devez valider votre compte pour continuer."
+    mailer:
+      confirmation_instructions:
+        subject: "Instructions de confirmation"
+      reset_password_instructions:
+        subject: "Instructions pour changer le mot de passe"
+      unlock_instructions:
+        subject: "Instructions pour déverrouiller le compte"
+      password_change:
+        subject: "Votre mot de passe a été modifié avec succés."
+    omniauth_callbacks:
+      failure: "Nous n'avons pas pu vous authentifier via %{kind} : '%{reason}'."
+      success: "Authentifié avec succès via %{kind}."
+    passwords:
+      no_token: "Vous ne pouvez accéder à cette page sans passer par un e-mail de réinitialisation de mot de passe. Si vous êtes passé par un e-mail de ce type, assurez-vous d'utiliser l'URL complète."
+      send_instructions: "Vous allez recevoir les instructions de réinitialisation du mot de passe dans quelques instants"
+      send_paranoid_instructions: "Si votre e-mail existe dans notre base de données, vous allez recevoir un lien de réinitialisation par e-mail"
+      updated: "Votre mot de passe a été édité avec succès, vous êtes maintenant connecté"
+      updated_not_active: "Votre mot de passe a été changé avec succès."
+    registrations:
+      new:
+        facebook: "S'inscrire avec Facebook"
+        sign_up: "S'inscrire"
+        destroyed: "Votre compte a été supprimé avec succès. Nous espérons vous revoir bientôt."
+        signed_up: "Bienvenue, vous êtes connecté."
+        signed_up_but_inactive: "Vous êtes bien enregistré. Vous ne pouvez cependant pas vous connecter car votre compte n'est pas encore activé."
+        signed_up_but_locked: "Vous êtes bien enregistré. Vous ne pouvez cependant pas vous connecter car votre compte est verrouillé."
+        signed_up_but_unconfirmed: "Un message contenant un lien de confirmation a été envoyé à votre adresse email. Ouvrez ce lien pour activer votre compte."
+        update_needs_confirmation: "Votre compte a bien été mis à jour mais nous devons vérifier votre nouvelle adresse email. Merci de vérifier vos emails et de cliquer sur le lien de confirmation pour finaliser la validation de votre nouvelle adresse."
+        updated: "Votre compte a été modifié avec succès."
+      edit:
+        update: "Mettre à jour"
+        leave_blank_if_you_don_t_want_to_change_it: "Ne rien ecrire si vous ne voulez pas modifier"
+        we_need_your_current_password_to_confirm_your_changes: "Nous avons besoin de votre mot de passe actuel"
+        cancel_my_account: "Supprimer mon compte"
+    sessions:
+      new:
+        sign_in: "Se connecter"
+        signed_in: "Connecté."
+        signed_out: "Déconnecté."
+        already_signed_out: "Déconnecté."
+    unlocks:
+      send_instructions: "Vous allez recevoir les instructions nécessaires au déverrouillage de votre compte dans quelques instants"
+      send_paranoid_instructions: "Si votre compte existe, vous allez bientôt recevoir un email contenant les instructions pour le déverrouiller."
+      unlocked: "Votre compte a été déverrouillé avec succès, vous êtes maintenant connecté."
+    errors:
+      messages:
+        already_confirmed: "a déjà été validé(e), veuillez essayer de vous connecter"
+        confirmation_period_expired: "à confirmer dans les %{period}, merci de faire une nouvelle demande"
+        expired: "a expiré, merci d'en faire une nouvelle demande"
+        not_found: "n'a pas été trouvé(e)"
+        not_locked: "n'était pas verrouillé(e)"
+        not_saved:
+          one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+          other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+
+
+  producer:
+    new:
+      Welcome: "Hop Hop Hop! Pas si vite, avant de devenir un producteur, nous avons besoin de collecter quelques informations sur vous"
   navbar:
+    producer: "Producteurs"
     log_out: "Déconnexion"
     sign_in: "Me connecter"
     sign_up: "M'inscrire"
+    my_profil: "Mon profil"
+    my_user_profil: "Mon profil utilisateur"
+    my_producer_profil: "Mon profil producteur"
 
   shared_links:
     no_account: "Vous n'avez pas de compte ?"
