fix: view for delete & edit for each notebooks and removing a recipe … (#246)
* fix: view for delete & edit for each notebooks and removing a recipe inside a notebook

* fix: grammar & error 500

* fix: blob image fixed

* fix: add recipe fixed

* fix: fix delete notebook eager load

* fix: size textarea in notebook description

* fix: validate button fixed

* fix: description detroncatured

* fix: fixing the norm

* feat: translation

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -307,11 +307,6 @@ fr:
     delete: "Supprimer le point de vente"
     validate: "Valider"
 
-  notebook:
-    edit:
-      invalid: "Le carnet de recette n'est pas conforme"
-      invalid_image: "L'image est invalide"
-
   feedback:
     notification: "Votre avis a bien été pris en compte."
 
@@ -319,7 +314,9 @@ fr:
     title: 'Mes carnets de recette'
     add: 'Créer un carnet de recette'
     delete: 'Supprimer'
-    edit: 'Éditer'
+    edit:
+      invalid: "L'edition est incorrect"
+      valid: "Carnet correctement modifié"
     edit_name: 'Édition du carnet "%{name}"'
     open: 'Consulter'
     confirm_delete: 'Êtes vous sûr de vouloir supprimer ce carnet de recette ?'
@@ -328,6 +325,7 @@ fr:
       name: "Nom du carnet de recettes"
       desc: "Description du style de carnet que vous réalisez"
       img: "Image illustrant votre carnet"
+    destroy: "Carnet correctement supprimé"
 
   shopping_list:
     title: "Listes de course"
