--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,8 @@ en:
   hello: "Hello world"
   placeholder_email: "E-mail adress"
   placeholder_password: "Password"
+  placeholder_first_name: "First name"
+  placeholder_last_name: "Last name"
 
   devise:
     facebook: "Sign in with Facebook"
@@ -116,6 +118,10 @@ en:
       models:
         user:
           attributes:
+            first_name:
+              blank: "The First name field must not be empty"
+            last_name:
+                blank: "The Last name field must not be empty"
             email:
               taken: "An account already exists with this email address. Please try again"
               blank: "The Email field must not be empty"
